--- a/CurlingScheduler/CurlingScheduler.csproj
+++ b/CurlingScheduler/CurlingScheduler.csproj
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <Deterministic>false</Deterministic>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -51,7 +54,7 @@
     <Compile Include="Model\Team.cs" />
     <Compile Include="Model\Week.cs" />
     <Compile Include="Service\Balancer.cs" />
-    <Compile Include="Service\DrawBalancer.cs" />
+    <Compile Include="Service\DrawSheetBalancer.cs" />
     <Compile Include="Service\GameScheduler.cs" />
     <Compile Include="Service\OutputWriter.cs" />
     <Compile Include="Service\ScheduleCreator.cs" />
