--- a/CurlingScheduler.Ui/App.config
+++ b/CurlingScheduler.Ui/App.config
@@ -5,6 +5,7 @@
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="lib" />
       <dependentAssembly>
         <assemblyIdentity name="Unity.Abstractions" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.11.6.0" newVersion="5.11.6.0" />
