--- a/CurlingScheduler.Ui/packages.config
+++ b/CurlingScheduler.Ui/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="3.8.2" targetFramework="net48" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net48" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
