--- a/CurlingScheduler/CurlingScheduler.csproj
+++ b/CurlingScheduler/CurlingScheduler.csproj
@@ -54,11 +54,12 @@
     <Compile Include="Model\Team.cs" />
     <Compile Include="Model\Week.cs" />
     <Compile Include="Service\Balancer.cs" />
-    <Compile Include="Service\DrawSheetBalancer.cs" />
+    <Compile Include="Service\DrawBalancer.cs" />
     <Compile Include="Service\GameScheduler.cs" />
     <Compile Include="Service\OutputWriter.cs" />
     <Compile Include="Service\ScheduleCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\SheetBalancer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
