--- a/CurlingScheduler/CurlingScheduler.csproj
+++ b/CurlingScheduler/CurlingScheduler.csproj
@@ -53,13 +53,13 @@
     <Compile Include="Model\Schedule.cs" />
     <Compile Include="Model\Team.cs" />
     <Compile Include="Model\Week.cs" />
-    <Compile Include="Service\Balancer.cs" />
     <Compile Include="Service\DrawBalancer.cs" />
     <Compile Include="Service\GameScheduler.cs" />
     <Compile Include="Service\OutputWriter.cs" />
     <Compile Include="Service\ScheduleCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\SheetBalancer.cs" />
+    <Compile Include="Service\StoneBalancer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
